年份选框显示修复

--- a/main/templates/ins/photos_list/advice.html
+++ b/main/templates/ins/photos_list/advice.html
@@ -237,5 +237,6 @@
                 locale: 'zh',
             }
         );
+        $('.ui.form input[type=number]').css({"padding": 0});
     </script>
 {% endblock %}
