--- a/main/templates/ins/photos_list/set_public.html
+++ b/main/templates/ins/photos_list/set_public.html
@@ -234,5 +234,6 @@
                 locale: 'zh',
             }
         );
+        $('.ui.form input[type=number]').css({"padding": 0});
     </script>
 {% endblock %}
