--- a/main/templates/main/intro.html
+++ b/main/templates/main/intro.html
@@ -160,5 +160,6 @@
                 locale: 'zh',
             }
         );
+        $('.ui.form input[type=number]').css({"padding": 0});
     </script>
 {% endblock %}
