输入框变长

--- a/main/templates/admin/departs_list.html
+++ b/main/templates/admin/departs_list.html
@@ -53,7 +53,7 @@
 
                     <form style="text-align: center;" class="ui inline" method="post"
                           action="{{ url_for('admin.edit_depart', depart_id=depart.id) }}">
-                        <input id="edit_depart_name" name="depart_name" value="{{ depart.name }}">
+                        <input style="width:250px;" id="edit_depart_name" name="depart_name" value="{{ depart.name }}">
                         <input type="hidden" name="depart_id" value="{{ depart.id }}">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <button onclick="return pre_edit_depart()"
